# django-celery-monitor

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.rst  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
django_celery_monitor/: __init__.py  admin.py  apps.py  camera.py  humanize.py  managers.py  models.py  utils.py
django_celery_monitor/migrations/: 0001_initial.py  0002_workerstate_last_update.py
docs/: conf.py
requirements/: pkgutils.txt
tests/proj/: celery.py  settings.py  wsgi.py
tests/unit/: conftest.py  test_camera.py
