[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "django-celery-monitor"
version = "1.1.2"
description = "Celery monitor for Django."
readme = { file = "README.rst", content-type = "text/x-rst" }
license = "BSD-3-Clause"
authors = [
  { name = "Jannis Leidel", email = "jannis@leidel.info" },
]
keywords = ["celery", "django", "events", "monitoring"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Topic :: Communications",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"
dependencies = [
  "celery>=4.4,<6",
]

[project.urls]
Homepage = "https://django-celery-monitor.readthedocs.io/"
Source = "https://github.com/jazzband/django-celery-monitor"
Download = "https://pypi.org/project/django-celery-monitor/"

[project.optional-dependencies]
test = [
  "Django>=4.2,<5.2",
  "pytest>=8.3",
  "pytest-cov>=5",
  "pytest-django>=4.8",
  "pytz",
]
docs = [
  "Django>=4.2,<5.2",
  "sphinx>=7.4",
  "sphinx-celery>=1.1",
]
lint = [
  "build>=1.2",
  "check-manifest>=0.49",
  "readme-renderer>=44",
  "ruff>=0.11.0",
  "twine>=5.1",
]
dev = [
  "build>=1.2",
  "check-manifest>=0.49",
  "Django>=4.2,<5.2",
  "pre-commit>=4.2",
  "pytest>=8.3",
  "pytest-cov>=5",
  "pytest-django>=4.8",
  "pytz",
  "readme-renderer>=44",
  "ruff>=0.11.0",
  "sphinx>=7.4",
  "sphinx-celery>=1.1",
  "tox>=4.24",
  "twine>=5.1",
]

[dependency-groups]
test = [
  "Django>=4.2,<5.2",
  "pytest>=8.3",
  "pytest-cov>=5",
  "pytest-django>=4.8",
  "pytz",
]
docs = [
  "Django>=4.2,<5.2",
  "sphinx>=7.4",
  "sphinx-celery>=1.1",
]
lint = [
  "build>=1.2",
  "check-manifest>=0.49",
  "readme-renderer>=44",
  "ruff>=0.11.0",
  "twine>=5.1",
]
dev = [
  { include-group = "test" },
  { include-group = "docs" },
  { include-group = "lint" },
  "pre-commit>=4.2",
  "prek>=0.3.8",
  "tox>=4.24",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.proj.settings"
python_classes = ["test_*"]
testpaths = ["tests/unit"]

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
ignore = ["B007", "B018", "E741"]
fixable = [
  "I",  # isort
  "RUF022",
  "RUF100",  # Unused `noqa` directive
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802"]
"django_celery_monitor/migrations/*.py" = ["I001"]

[tool.check-manifest]
ignore = [
  "docs/_build*",
]
